# pyqt-qml-rust-example

./: .gitignore  LICENSE  README.md  example.qml
imports/QmlPyExample/: qmldir
qml_example/: Cargo.toml  build.rs  qmetaobject_rust.hpp
qml_example/src/: lib.rs
